[package]
name = "sqlpage"
version = "0.44.0"
edition = "2024"
description = "Build data user interfaces entirely in SQL. A web server that takes .sql files and formats the query result using pre-made configurable professional-looking components."
keywords = ["web", "sql", "framework"]
license = "MIT"
homepage = "https://sql-page.com/"
repository = "https://github.com/sqlpage/SQLPage"
documentation = "https://docs.rs/sqlpage"
include = ["/src", "/README.md", "/build.rs", "/sqlpage"]

[profile.superoptimized]
inherits = "release"
strip = "debuginfo"
lto = "fat"
panic = "abort"
codegen-units = 2

[dependencies]
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
mysql_async = { version = "0.37.0", default-features = false, features = ["default-rustls-ring", "chrono", "bigdecimal"] }
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "tokio", "tokio-util", "rustls", "chrono", "bigdecimal"] }
tokio-rusqlite = { version = "0.7.0", features = ["bundled", "functions", "load_extension", "collation", "chrono", "blob"] }
odbc-api = { version = "28.0.0", default-features = false, features = ["odbc_version_3_80"] }
deadpool = { version = "0.13.0", features = ["rt_tokio_1"] }
uuid = "1"
chrono = "0.4.23"
actix-web = { version = "4", features = ["rustls-0_23", "cookies"] }
percent-encoding = "2.2.0"
handlebars = "6.2.0"
log = "0.4.17"
mime_guess = "2.0.4"
futures-util = "0.3.21"
tokio = { version = "1.24.1", features = ["macros", "rt", "process", "sync"] }
tokio-stream = "0.1.9"
anyhow = "1"
serde = "1"
serde_json = { version = "1.0.82", features = [
    "preserve_order",
    "raw_value",
    "arbitrary_precision",
] }
lambda-web = { version = "0.2.1", features = ["actix4"], optional = true }
sqlparser = { version = "0.62.0", default-features = false, features = [
    "std",
    "visitor",
] }
async-stream = "0.3"
async-trait = "0.1.61"
async-recursion = "1.0.0"
bigdecimal = { version = "0.4.8", features = ["serde-json"] }
include_dir = "0.7.2"
config = { version = "0.15.4", features = ["json"] }
markdown = { version = "1", features = ["log"] }
argon2 = "0.5.3"
actix-web-httpauth = "0.8.0"
rand = "0.10.0"
actix-multipart = "0.7.2"
base64 = "0.22"
bytes = "1"
hmac = "0.13"
sha2 = "0.11"
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "tls12", "webpki-roots"] }
dotenvy = "0.15.7"
csv-async = { version = "1.2.6", features = ["tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] } # keep in sync with actix-web, awc, and rustls-acme
rustls-native-certs = "0.8.1"
awc = { version = "3", features = ["rustls-0_23-webpki-roots"] }
clap = { version = "4.5.17", features = ["derive"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
openidconnect = { version = "4.0.0", default-features = false, features = ["accept-rfc3339-timestamps"] }
encoding_rs = "0.8.35"
regex = "1"

# OpenTelemetry / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-opentelemetry = { version = "0.33", default-features = false }
tracing-actix-web = { version = "0.7", default-features = false }
tracing-log = "0.2"
opentelemetry = { version = "0.32", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["metrics", "rt-tokio", "spec_unstable_metrics_views", "experimental_trace_batch_span_processor_with_async_runtime", "experimental_metrics_periodicreader_with_async_runtime"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "metrics"] }
opentelemetry-http = { version = "0.32", default-features = false }
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }


[features]
default = []
odbc-static = ["odbc-api/vendored-unix-odbc"]
lambda-web = ["dep:lambda-web", "odbc-static"]

[dev-dependencies]
actix-http = "3"
tokio = { version = "1", features = ["rt", "time", "test-util"] }

[build-dependencies]
awc = { version = "3", features = ["rustls-0_23-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
actix-rt = "2.8"
libflate = "2"
futures-util = "0.3.21"
